// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not accept 0 1`] = `
[
  {
    "code": "too_small",
    "max": undefined,
    "min": 1,
    "path": [],
  },
]
`;

exports[`should not accept NaN 1`] = `
[
  {
    "code": "is_nan",
    "path": [],
  },
]
`;

exports[`should not accept negative integers 1`] = `
[
  {
    "code": "too_small",
    "max": undefined,
    "min": 1,
    "path": [],
  },
]
`;

exports[`should not accept negative integers 2`] = `
[
  {
    "code": "too_small",
    "max": undefined,
    "min": 1,
    "path": [],
  },
]
`;

exports[`should not accept negative integers 3`] = `
[
  {
    "code": "too_small",
    "max": undefined,
    "min": 1,
    "path": [],
  },
]
`;

exports[`should not accept non-integers 1`] = `
[
  {
    "code": "invalid_integer",
    "path": [],
  },
]
`;

exports[`should not accept non-integers 2`] = `
[
  {
    "code": "invalid_integer",
    "path": [],
  },
]
`;
